feat(tooling): update build configurations
Signed-off-by: Jeremy A Gray <jeremy.a.gray@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,149 @@
-[tool.poetry]
-name = "pdflatex"
-version = "0.1.3"
-description = "Simple wrapper to calling pdflatex"
-authors = ["mbello <mbello@users.noreply.github.com>"]
-license = "CC0"
-readme = "README.md"
-repository = "https://github.com/mbello/pdflatex"
-homepage = "https://github.com/mbello/pdflatex"
-keywords = ['pdflatex', 'pypdflatex', 'latex to pdf using python']
-
-[tool.poetry.dependencies]
-python = "^3.6"
-attrs = "^18.2"
-
-[tool.poetry.dev-dependencies]
-pytest = "^3.0"
+# ******************************************************************************
+#
+# pdflatex2, a Python/PDFLaTeX interface.
+#
+# Copyright 2022 Jeremy A Gray <gray@flyquackswim.com>.
+# Copyright 2019 Marcelo Bello.
+#
+# SPDX-License-Identifier: MIT
+#
+# ******************************************************************************
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+
+# Setuptools.
+requires = [
+  "setuptools",
+  "wheel",
+]
+build-backend = "setuptools.build_meta"
+
+# Poetry.
+# requires = ["poetry_core>=1.0.0"]
+# build-backend = "poetry.core.masonry.api"
+
+[tool]
+
+[tool.black]
+
+line-length = 88
+target-version = ['py38']
+include = '\.pyi?$'
+exclude = '''
+
+(
+  /(
+    \.git
+    | \.pytest_cache
+    | __pycache__
+    | htmlcov
+  )/
+)
+'''
+
+[tool.isort]
+
+ensure_newline_before_comments = true
+force_single_line = true
+include_trailing_comma = true
+line_length = 88
+multi_line_output = 3
+use_parentheses = true
+
+[tool.pccc]
+
+header_length = 50
+body_length = 72
+wrap = true
+force_wrap = true
+spell_check = false
+repair = false
+ignore_generated_commits = false
+
+types = [
+  "depends",
+  "doc",
+  "feat",
+  "fix",
+  "perf",
+  "refactor",
+  "release",
+  "style",
+  "test",
+]
+
+scopes = [
+  "bin",
+  "pdflatex2",
+  "tooling",
+]
+
+footers = [
+  "github-closes",
+  "signed-off-by",
+]
+
+required_footers = [
+  "signed-off-by",
+]
+
+[tool.poetry]
+
+authors = [
+  "Jeremy A Gray <gray@flyquackswim.com>",
+]
+description = "a Python/PDFLaTeX interface"
+name = "pdflatex2"
+version = "0.1.3"
+license = "MIT"
+maintainers = [
+  "Jeremy A Gray <gray@flyquackswim.com>",
+]
+readme = "README.rst"
+homepage = "https://github.com/jeremyagray/pdflatex2"
+repository = "https://github.com/jeremyagray/pdflatex2"
+
+classifiers = [
+  "Development Status :: 3 - Alpha",
+  "License :: OSI Approved :: MIT",
+  "Intended Audience :: Developers",
+  "Programming Language :: Python :: 3.6",
+  "Programming Language :: Python :: 3.7",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+]
+
+packages = [
+  { include = "pdflatex2" },
+]
+
+[tool.poetry.dependencies]
+
+python = ">=3.6.1,<4.0"
+
+[tool.poetry.dev-dependencies]
+
+Sphinx = "^4"
+black = { version = "*", allow-prereleases = true }
+factory-boy = "^3.2"
+flake8 = "^3.8"
+flake8-docstrings = "^1.5"
+isort = "^5.6"
+hypothesis = "^6.9"
+pccc = "^0.4.13"
+pre-commit = "^2.9"
+pyfakefs = "^4.3"
+pytest = "^6.1"
+pytest-cov = "^2.10"
+tox = "^3"
+
+[tool.poetry.scripts]
+
+[tool.poetry.urls]
+
+"Issues" = "https://github.com/jeremyagray/pdflatex2/issues"
+"Documentation" = "https://pdflatex2.readthedocs.io/"
+"Repository" = "https://github.com/jeremyagray/pdflatex2"
+
+[tool.pytest.ini_options]
