--- a/pyproject.toml
+++ b/pyproject.toml
@@ -121,23 +121,23 @@ packages = [
 
 [tool.poetry.dependencies]
 
-python = ">=3.6.1,<4.0"
+python = ">=3.10.1,<4.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 
-Sphinx = "^5"
-black = { version = "*", allow-prereleases = true }
-factory-boy = "^3.2"
-flake8 = "^3.8"
-flake8-docstrings = "^1.5"
-isort = "^5.6"
-hypothesis = "^6.9"
-pccc = "^0.4.13"
-pre-commit = "^2.9"
-pyfakefs = "^4.3"
-pytest = "^6.1"
-pytest-cov = "^2.10"
-tox = "^3"
+Sphinx = ">=7"
+black = ">=24"
+factory-boy = ">=3"
+flake8 = ">=7"
+flake8-docstrings = ">=1"
+isort = ">=5"
+hypothesis = ">=6"
+pccc = ">=0"
+pre-commit = ">=3"
+pyfakefs = ">=5"
+pytest = ">=8"
+pytest-cov = ">=5"
+tox = ">=4"
 
 [tool.poetry.scripts]
 
