--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 #
 # pdflatex2, a Python/PDFLaTeX interface.
 #
-# Copyright 2022 Jeremy A Gray <gray@flyquackswim.com>.  All rights
-# reserved.
+# Copyright 2022-2024 Jeremy A Gray <gray@flyquackswim.com>.  All
+# rights reserved.
 # Copyright 2019 Marcelo Bello.
 #
 # SPDX-License-Identifier: MIT
@@ -22,6 +22,7 @@
 .pytest_cache
 .python-version
 .tox
+.venv
 __pycache__
 build
 commit
