--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,13 @@
 # ******************************************************************************
 #
-# pccc, the Python Conventional Commit Checker.
+# pdflatex2, a Python/PDFLaTeX interface.
 #
-# Copyright 2020-2022 Jeremy A Gray <gray@flyquackswim.com>.
+# Copyright 2022-2024 Jeremy A Gray <gray@flyquackswim.com>.  All
+# rights reserved.
 #
-# SPDX-License-Identifier: GPL-3.0-or-later
+# Copyright 2019 Marcelo Bello.
+#
+# SPDX-License-Identifier: MIT
 #
 # ******************************************************************************
 
@@ -19,29 +22,27 @@ long_description = file: README.rst
 long_description_content_type = text/x-rst
 maintainer = Jeremy A Gray
 maintainer_email = gray@flyquackswim.com
-name = pccc
-url = https://github.com/jeremyagray/pccc
-version = 0.1.4
+name = pdflatex2
+url = https://github.com/jeremyagray/pdflatex2
+version = 0.1.5
 
 project_urls =
-  Issues = https://github.com/jeremyagray/pccc/issues
-  Documentation = https://pccc.readthedocs.io/
-  Repository = https://github.com/jeremyagray/pccc
+  Issues = https://github.com/jeremyagray/pdflatex2/issues
+  Documentation = https://pdflatex2.readthedocs.io/
+  Repository = https://github.com/jeremyagray/pdflatex2
 
 classifiers =
   Development Status :: 3 - Alpha
   License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
   Intended Audience :: Developers
-  Programming Language :: Python :: 3.6
-  Programming Language :: Python :: 3.7
-  Programming Language :: Python :: 3.8
-  Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
+  Programming Language :: Python :: 3.11
+  Programming Language :: Python :: 3.12
   Topic :: Software Development :: Version Control :: Git
 
 [options]
 
-packages = pccc
+packages = pdflatex2
 
 install_requires =
   bespon
@@ -64,5 +65,5 @@ tests_require =
 
 [options.entry_points]
 
-console_scripts =
-  pccc = pccc:main
+# console_scripts =
+#   pdflatex2 = pdflatex2:main
